# nutpieR

./: .Rbuildignore  .gitignore  CLAUDE.md  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  WINDOWS_NOTES.md  polish-pass-plan.md  progress-ui-plan.md  test-slim-plan.md
.claude/: settings.local.json
R/: cache.R  compile.R  diagnostics.R  extendr-wrappers.R  helpers.R  init.R  nutpieR-package.R  progress.R  results.R  sample.R  sample_r.R
benchmarks/: analyze_results.R  posteriordb_benchmark.R  result_assembly_benchmark.R
inst/benchmarks/: r_callback_roundtrip.R
man/: bridgestan_version.Rd  bs_block_names.Rd  bs_block_tp_names.Rd  bs_full_names.Rd  bs_ndim_block.Rd  bs_ndim_unc.Rd  bs_open.Rd  bs_param_constrain.Rd  bs_param_constrain_block.Rd  bs_param_unconstrain.Rd  bs_param_unconstrain_json.Rd  bs_unc_names.Rd  compile_stan_model.Rd  get_param_names.Rd  get_param_unc_names.Rd  nutpieR-package.Rd  nutpie_cache_dir.Rd  nutpie_clear_cache.Rd  nutpie_compile_model.Rd  nutpie_diagnostics.Rd  nutpie_nuts_params.Rd  nutpie_param_names.Rd  nutpie_prune_cache.Rd  nutpie_sample.Rd  nutpie_sample_r.Rd  nutpie_unconstrain.Rd  nutpie_warmup_diagnostics.Rd  nutpie_warmup_draws.Rd  param_constrain_rs.Rd  param_unconstrain_json_rs.Rd  sample_normal.Rd  sample_stan.Rd
spikes/: bench-36-results.csv  bench-36.R  hierarchical_params.stan  large_params.stan
src/: Makevars.in  Makevars.win.in  entrypoint.c  nutpieR-win.def
src/rust/: Cargo.toml
src/rust/patches/bridgestan-2.7.0/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  build.rs
src/rust/patches/bridgestan-2.7.0/src/: download.rs
src/rust/patches/bridgestan-2.8.0/: Cargo.toml  Cargo.toml.orig
src/rust/patches/bridgestan-2.8.0/src/: download.rs  pregenerated_bindings.rs
src/rust/src/: lib.rs  model.rs  r_density.rs
tests/: README.md  testthat.R
tools/: msrv.R
(+19 files in other folders)
