[package]
name = 'nutpieR'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'nutpieR'

[dependencies]
extendr-api = '0.8.1'
nuts-rs = { version = '0.17', features = ['arrow'] }
anyhow = '1'
thiserror = '2'
rand = '0.10'
arrow = { version = '57', default-features = false }

[profile.release]
lto = true
codegen-units = 1
