[package]
name = 'nutpieR'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.85'

[lib]
crate-type = [ 'staticlib' ]
name = 'nutpieR'

[dependencies]
extendr-api = '0.8.1'
nuts-rs = { version = '0.17', features = ['arrow'] }
anyhow = '1'
thiserror = '2'
rand = '0.10'
arrow = { version = '57', default-features = false }
bridgestan = { version = '2.7', features = ['download-bridgestan-src'] }
indicatif = '0.17'
dirs = '6'
libloading = '0.8'

[profile.release]
lto = "thin"
codegen-units = 4
