[package]
name = 'nutpieR'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.85'

[lib]
crate-type = [ 'staticlib' ]
name = 'nutpieR'

[dependencies]
extendr-api = '0.9.0'
nuts-rs = { version = '0.17', features = ['arrow'] }
anyhow = '1'
thiserror = '2'
rand = '0.10'
arrow = { version = '57', default-features = false }
bridgestan = { version = '2.7', features = ['download-bridgestan-src'] }
dirs = '6'
serde_json = '1'

[patch.crates-io]
# Patch bridgestan to add allowlist filters in build.rs.
# On Windows, bindgen picks up CRT symbols from stddef.h/stdbool.h
# (e.g. _errno, __security_init_cookie) which are not exported by
# the Stan model DLL, causing GetProcAddress failures at load time.
bridgestan = { path = "patches/bridgestan-2.7.0" }

[profile.release]
lto = "thin"
codegen-units = 4
